working on getting jlink to work